--- a/app/views/Admin/main.html
+++ b/app/views/Admin/main.html
@@ -1,62 +1,357 @@
-#{extends 'Admin/index.html' /}
-<div class="container">
+<!DOCTYPE html>
 
-  <div class="row row-offcanvas row-offcanvas-right">
+<html>
+    <head>
+        <title>#{get 'title' /}</title>
+        <meta charset="${_response_encoding}">
+        <link rel="stylesheet" href="@{'/public/stylesheets/bootstrap-theme.css'}">
+        <link rel="stylesheet" href="@{'/public/stylesheets/bootstrap-theme.min.css'}">
+        
+        <link rel="stylesheet" href="@{'/public/stylesheets/bootstrap.min.css'}">
+        <link rel="stylesheet" href="@{'/public/stylesheets/index.css'}">
+        <link rel="stylesheet" href="@{'/public/stylesheets/magnific-popup.css'}">
+        #{get 'moreStyles' /}
+        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.ico'}">
+        <meta name="google-site-verification" content="oRukpfiynDcd9OaJ67nPndoh8JdC1k08PoHshcfBytw" />
+        
+        #{get 'moreScripts' /}
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR5BqFaXKB9kYMEwy4xzFvuyMEX_P6IPU&sensor=false&language=en"></script>
+        <script src="@{'/public/javascripts/jquery-1.7.1.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/jquery.magnific-popup.js'}" type="text/javascript"></script>	
+		<!-- bootstrap-modal js -->
+		<script src="@{'/public/javascripts/bootstrap.js'}" charset="${_response_encoding}" type="text/javascript"></script>        
+		
+        <script src="@{'/public/javascripts/index.js'}" type="text/javascript" charset="${_response_encoding}"></script>        
+    
+  	    <!-- Jeff added the following -->
+    	<!-- jquery 
+		<script src="@{'/public/javascripts/jquery-2.1.1.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+		--> 
+		<!-- moment js -->
+		<script src="@{'/public/javascripts/moment-with-locales.min.js'}" charset="${_response_encoding}" type="text/javascript"></script>
+		
+		<!-- datetime picker js -->
+		<script src="@{'/public/javascripts/bootstrap-datetimepicker.min.js'}" charset="${_response_encoding}" type="text/javascript"></script>
+		
+		<!-- datepicker css -->
+		<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap-datetimepicker.min.css'}" />
+		
+		<!-- self-defined pagination -->
+		<script src="@{'/public/javascripts/pagination.js'}" charset="${_response_encoding}" type="text/javascript"></script>
+		<!-- End of Jeff -->	
+    	<!--google统计-->
+    	<script>
+ 	 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+ 		 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ 	 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ 		 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <div class="col-xs-12 col-sm-9">
-      <p class="pull-right visible-xs">
-        <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-      </p>
-      <div class="jumbotron">
-        <h1>CSSA后台管理</h1>
-        <p>学联网站的后台管理包括发布帖子，发布活动，活动报名管理，用户管理等功能。还有统计，数据分析等扩展功能</p>
-      </div>
-      <div class="row">
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>新建帖子</h2>
-          <p>丰富的编辑器，新建帖子，新建活动支持上传图片，支持从Word粘贴。</p>
-          <p><a class="btn btn-default" href="/admin/newPost" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>所有帖子</h2>
-          <p>查看所有帖子，删除或修改帖子，支持模糊查询</p>
-          <p><a class="btn btn-default" href="/admin/allPosts?size=10&page=1" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>用户管理</h2>
-          <p>查看所有用户，管理权限，支持过滤器查找，模糊查找</p>
-          <p><a class="btn btn-default" href="/admin/users?size=10000&page=1" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>活动管理</h2>
-          <p>活动管理，报名管理，删除／修改活动</p>
-          <p><a class="btn btn-default" href="/admin/events?size=100&page=1" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>文件上传</h2>
-          <p>本地上传可供用户下载的文件</p>
-          <p><a class="btn btn-default" href="/admin/newDownloadFile" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>文件管理</h2>
-          <p>管理可供用户下载的文件</p>
-          <p><a class="btn btn-default" href="/admin/allFiles?size=10&page=1" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-        <div class="col-6 col-sm-6 col-lg-4">
-          <h2>群发邮件</h2>
-          <p>群发邮件给指定用户</p>
-          <p><a class="btn btn-default" href="/admin/broadcastEmail" role="button">点击查看 »</a></p>
-        </div><!--/span-->
-      </div><!--/row-->
-    </div><!--/span-->
-    <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-      <div class="list-group">
-        <a href="/admin/help" class="list-group-item active">使用帮助</a>
-      </div>
-    </div><!--/span-->
+ 	 	ga('create', 'UA-59599012-1', 'auto');
+  		ga('send', 'pageview');
 
-  </div><!--/row-->
+		</script>
+    </head>
+    <body>
 
-  <hr>
+    	<nav class="navbar navbar-primary" role="navigation">
+  			<div class="container-fluid topbar">
+    			<!-- Collect the nav links, forms, and other content for toggling -->
+    			<div class="collapse navbar-collapse minindex" id="bs-example-navbar-collapse-1">
+      			<ul class="nav navbarlogo" style="
+    			width: 298px;
+				">        		
+				<a href=http://www.cssa-munich.de>
+				<img src="http://www.cssa-munich.de/public/images/logolang1.jpg" style="
+    			max-width: 90%;
+   			 	padding-bottom: 12px;
+   			 	padding-top: 11px;
+				"></a>				
+				</ul>
+  					
+ 				 <ul class="nav navbar-nav" style="
+    border-top-width: 0px;
+    padding-top: 11px;
+">        				
+	      				<li id="post" class="post"><a href="/postStream/page?size=10&amp;page=1">&{'views.tool.news'}</a></li>
+        				<li id="event" class="event"><a href="/eventStream/page?size=10&amp;page=1">&{'views.tool.activity'}</a></li>
+        				<li id="download"><a href="/Download/page">&{'views.tool.download'}</a></li>
+        				<li id="wiki"><a href="http://www.cssa-munich.de:8088/dokuwiki">&{'views.tool.wiki'}</a></li>
+        				<li id="wiki"><a href="/wenti/page">&{'views.tool.wenti'}</a></li>
+        				<li id="about"><a href="/About/page">&{'views.tool.about'}</a></li>
+        
+      				</ul>
+      				 				
+      				<form class="navbar-form navbar-left" role="form" action="https://www.google.com/search" style="width: 226px;padding-top: 11px;">
+						<div class="input-group">
+						<input type="hidden" name="sitesearch" value="www.cssa-munich.de">
+						<input type="text" name="as_q" class="form-control" placeholder="Search">
+						
+						<span class="input-group-btn">
+							<button class="btn btn-primary" type="submit" value="Go" title="搜索">
+						
+						<span class="glyphicon glyphicon-search"></span>
+							</button>
+						</span>
+						</div>
+					</form>
+				
+							#{if flag_login}
+							<ul class="nav navbar-nav navbar-right"  style="padding-top: 11px;">
+								<li ><a href="/myProfile">&{'funktion.status.welcome'}, ${email}</a></li>
+        						<li ><a href="/Secure/logout">&{'funktion.status.logout'}</a></li>
+      						</ul>
+							#{/if}
+							#{else}
+      				<ul class="nav navbar-nav navbar-right"  style="padding-top: 11px;">
+       					<li id="registerButton"><a href="#">&{'funktion.status.anmelden'}</a></li>
+        				<li id="loginButton"><a href="#">&{'funktion.status.logen'}</a></li>
+      				</ul>
+							#{/else}
 
+							
+			</div><!-- /.navbar-collapse -->
+  			</div><!-- /.container-fluid -->
+ 		</nav>
+ 		
+ 		
+ 		
+        #{doLayout /}
+<div id="loginForm">
+	<form action="@{Secure.authenticate()}" class="form-horizontal" method="post" role="form">
+		<div class="form-group">
+			<label for="inputEmail3" class="col-sm-4 control-label">&{'funktion.status.email'}</label>
+			<div class="col-sm-8">
+				<input name="username" type="text" class="form-control" id="inputEmail3"
+					placeholder="Email or Username">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="inputPassword3" class="col-sm-4 control-label">&{'funktion.status.password'}</label>
+			<div class="col-sm-8">
+				<input name="password" type="password" class="form-control" id="inputPassword3"
+					placeholder="Password">
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-12">
+				<div class="col-sm-offset-1 col-sm-4">
+					<div class="checkbox" style="padding-top:0px;">
+						<label> <input type="checkbox"> &{'funktion.status.remember'} </label>
+					</div>
+				</div>
+				
+				<div class="col-sm-offset-3 col-sm-4">
+
+					<!-- Button trigger modal -->
+					<a data-toggle="modal" data-target="#myModal" >&{'funktion.status.forget'}</a>
+				</div>
+			</div>
+		</div>
+		
+		<button type="submit" class="btn btn-primary dis submitLogin">&{'funktion.status.logen'}</button>
+		<button type="button" class="btn btn-primary dis returnLogin">&{'funktion.status.cancel'}</button>
+	</form>
 </div>
+
+<!--ResetPass Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel" align="center">&{'funktion.status.forget'}</h4>     <!--忘记密码?-->
+      </div>
+      <div class="modal-body">
+	    <p align="center">&{'funktion.status.password.test1'}</p>   <!--重设密码会发到您的邮箱，请确保此邮箱是CSSA注册邮箱-->
+	    <hr>
+		<div>
+			<input name="username" type="text" class="form-control" id="resetEmail" placeholder="Email">
+		</div>
+      </div>
+      <div class="modal-footer">
+      	<div id="ok" class="alert alert-success" style="display:none;">
+	 		&{'funktion.status.password.test2'} <!--邮箱发送成功，请去邮箱设置新密码。-->
+	 		<button type="button" class="close" data-dismiss="alert">&times;</button>
+		</div>
+      	
+      	<div id="danger" class="alert alert-danger " style="display:none;">
+  			&{'funktion.status.password.test3'} <!--Oh! 好像邮箱不对哦！-->
+  			<button type="button" class="close" data-dismiss="alert">&times;</button>
+		</div>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="resetPassButton" onclick="resetPassOnclick();">&{'funktion.status.password.test4'}</button> <!--重设密码-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<div id="registerForm">
+    #{form @Register.register(), id:'navigation_bar_register_form', class:'form-horizontal'}
+    <!--
+	<form action="@{Register.register()}" class="form-horizontal" method="post" role="form">
+    -->
+		<div class="form-group">
+			<label for="inputEmail3" class="col-sm-3 control-label">&{'funktion.status.email'}</label>
+			<div class="col-sm-9">
+				<input name="email" type="email" class="form-control" id="inputEmail3"
+					placeholder="Email">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="inputPassword3" class="col-sm-3 control-label">&{'funktion.status.password'}</label>
+			<div class="col-sm-9">
+				<input name="password" type="password" class="form-control" id="inputPassword3"
+					placeholder="Password">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="inputPassword3" class="col-sm-3 control-label">&{'funktion.status.password.confirm'}</label>
+			<div class="col-sm-9">
+				<input name="password2" type="password" class="form-control" id="inputPassword3"
+					placeholder="Password Twice">
+			</div>
+		</div>
+		<button type="submit" class="btn btn-primary dis submitRegister">&{'funktion.status.anmelden'}</button>
+		<button type="button" class="btn btn-primary dis returnRegister">&{'funktion.status.cancel'}</button>
+    #{/form}
+</div>
+        <div class="footer" style="margin-top:5px;">
+			<div id="reference">
+				<div id="row">
+					<li><h4>&{'views.down.partner'}:</h4></li>
+						<a href="http://munich.china-consulate.org/chn/">&{'views.down.partner1'}</a><br>
+						<a href="http://www.international.tum.de/willkommen-an-der-tum/internationale-austauschstudierende/tuminternational/">&{'views.down.partner2'}</a><br>
+						<a href="http://www.erich-paulun-institut.de/de/startseite">&{'views.down.partner3'}</a><br>
+						<a href="http://www.kaiyuan.de/">&{'views.down.partner4'}</a><br>
+						<a href="http://www.gerig-wealth.com/">&{'views.down.partner5'}</a><br>
+						<a href="http://konfuzius-muenchen.de/">&{'views.down.partner6'}</a><br>
+						<a href="http://www.tutoria-lmu.de/">&{'views.down.partner7'}</a><br>
+				</div>
+				<div id="row">
+					<ul>
+						<li><h4>&{'views.down.contact'}</h4></li>
+						<a href="mailto:kontakt@cssa-munich.de">kontakt@cssa-munich.de</a>
+						<a href="mailto:chinese.muenchen@gmail.com">chinese.muenchen@gmail.com</a>
+						
+						<li><h4>&{'views.down.support'}</h4></li>
+						<a href="mailto:support@cssa-munich.de">support@cssa-munich.de</a>
+					
+						
+					</ul>
+				</div>
+				<div id="row">
+					<ul>
+						<li><h4>&{'views.down.follow'}</h4></li>
+						<a href="http://www.cssa-munich.de/public/images/mail.html">&{'views.down.follow1'}</a><br>
+						<a href="http://mp.weixin.qq.com/s?__biz=MzA3NTMxMDU2OA==&mid=203251993&idx=1&sn=944a35bc8a5947334183476285cd2487&key=0ce8fa93c80e41c5adf9a2a29ee971e1a91f56196580630d9de3a1ce44006e72a22b7da0d11ede938f0cd8c13f49b554&ascene=1&uin=MjAzNDE2NzAyMA%3D%3D&devicetype=Windows+8&version=61000716&pass_ticket=HG9Z5RHPcYX9f3v87bbPDZR2zFqFlep59X%2FjCaAirEh%2B5GaSzH9qFN8oMp2lERoF">&{'views.down.follow2'}</a><br>
+						<a href="http://www.weibo.com/cssamunich">&{'views.down.follow3'}</a><br>
+						<a href="https://www.facebook.com/pages/CSSA-in-Munich-eV/334763784624">&{'views.down.follow4'}</a><br>
+						<a href="https://sites.google.com/a/cssa-munich.de/home/">&{'views.down.follow5'}</a><br>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<p style="text-align:center">Copyright © 2015. CSSA Munich All rights reserved.</p>
+		
+ #{if register}
+	#{if flag_register}
+	<div class="Alert">
+		<div class="alertMessage">&nbsp;&nbsp;&{'funktion.status.anmelden.erfolg'}</div>
+		<button type="button" class="btn btn-primary returnAlert">&{'funktion.status.ok'}</button>
+	</div>
+	#{/if}
+	#{else}
+	<div class="Alert">
+		<div class="alertMessage">&{'funktion.status.email.error'}</div>
+		<button type="button" class="btn btn-primary returnAlert">&{'funktion.status.ok'}</button>
+	</div>
+	#{/else}
+#{/if}
+
+#{if flag_twice}
+	<div class="Alert">
+		<div class="alertMessage">&{'funktion.status.password.error'}</div>
+		<button type="button" class="btn btn-primary returnAlert">&{'funktion.status.ok'}</button>
+	</div>
+#{/if}
+
+#{if wrongPW}
+<div class="Alert">
+	<div class="alertMessage">&nbsp;&nbsp;&{'funktion.status.password.wrong'}</div>
+	<button type="button" class="btn btn-primary returnAlert">&{'funktion.status.ok'}</button>
+</div>
+#{/if}
+        
+ <!-- TODO Must not be present everywhere, only when showing post & comments -->
+	<script type="text/javascript">  var disqus_developer = 1; </script> 
+	<script type="text/javascript">
+	//<![CDATA[
+	(function() {
+		var links = document.getElementsByTagName('a');
+		var query = '?';
+		for(var i = 0; i < links.length; i++) {
+		if(links[i].href.indexOf('#disqus_thread') >= 0) {
+			query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+		}
+		}
+		document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/elsewhere/get_num_replies.js' + query + '"></' + 'script>');
+	})();
+	//]]>
+	
+	
+	$(document).ready(function(){
+		var title = $("title").text();
+		if(title == "学联活动"){
+			$("li#event").attr("style","background-color:#f0f0f0;");
+			$("li#post").attr("style","background-color:#ffffff;");
+		}else if(title == "学联新闻"){
+			$("li#post").attr("style","background-color:#f0f0f0;");
+		}else if(title == "下载"){
+			$("li#download").attr("style","background-color:#f0f0f0;");
+		}else if(title == "关于学联"){
+			$("li#about").attr("style","background-color:#f0f0f0;");
+		}
+	});
+	
+	
+	// #resetPass onclick
+	function resetPassOnclick(){
+		if (window.XMLHttpRequest)
+		  {// code for IE7+, Firefox, Chrome, Opera, Safari
+		  xmlhttp=new XMLHttpRequest();
+		  }
+		else
+		  {// code for IE6, IE5
+		  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+		  }
+
+		var email = document.getElementById("resetEmail").value
+
+		xmlhttp.open("GET","Application/resetPass?email="+email, false);
+		xmlhttp.send();
+		var result=JSON.parse(xmlhttp.responseText);
+		//document.getElementById("numberInput").value=map.K;
+		//邮件发送成功
+		if (result == true){
+			if ($("div#danger").css("display") === "block"){
+				$("div#danger").attr("style","display: none;");
+			}
+			$("div#ok").attr("style","display: inline;");
+			$("div#ok").attr("style","float: left;");
+			$("div#ok").attr("style","margin-bottom: 15px");
+			$("div#ok").attr("style","text-align: left");
+		} else{
+			$("div#danger").attr("style","display: inline;");
+			$("div#danger").attr("style","float: left;");
+			$("div#danger").attr("style","margin-bottom: 15px");
+			$("div#danger").attr("style","text-align: left");
+		}
+	}
+	
+	</script>
+    </body>
+</html>
